Updated installation instructions