@@ -10,5 +10,6 @@ How-to Install
 1. Install MinecraftForge on your VANILLA launcher (Use the forge version specified in "info.txt" file, located in the "PhoenixCraftModpack" folder)
 2. Clone PhoenixCraft onto your desktop
 3. Create a new instance (using specified forge version, on vanilla launcher) using C:\-Wherever\PhoenixCraft\PhoenixCraftModpack\minecraft as root directory
-4. To Be discussed (Weather to upload mods to github or not, my guess is No)
+4. Set permgen to 256mb using "-XX:MaxPermSize=256m" (without quotes)
+5. Launch!
 
